--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -1,3 +1,6 @@
+.project {
+     margin-left: 20px;
+}
 /* applies to anything of class "example-class-selector" */
 .example-class-selector {
 	margin-top: 2em;
@@ -32,3 +35,5 @@ body {
      position: absolute;
      z-index: -1;
 }
+
+
